# amylice-proteogenomics-nf

./: .gitignore  README.md  REPRODUCIBILITY.md  nextflow.config  predict_amylogram_fast.R  pyproject.toml  retry_missing_amyloid_predictions.sh  run_amylogram_fast_srr32060234.sh  run_amyloid_after_proteomes_then_hla.sh  run_amyloid_predictors.sh  run_complete_processing_pipeline.sh  run_full_pipeline.sh  run_prepared_proteomes_from_bioinfo.sh  samples.txt.example
amylogram-py/: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
amylogram-py/docker/: Dockerfile  amylogram-reference.Dockerfile
amylogram-py/evidence/: amylogram_parity_report.md  benchmark_lookup_prediction.py  demo_prediction_report.json  demo_prediction_report.md  demo_predictions.csv  demo_skipped.tsv  docker_smoke_prediction_report.json  docker_smoke_prediction_report.md  docker_smoke_top_hits.tsv  lookup_benchmark.md  run_parity_checks.py
amylogram-py/scripts/: export_reference_fixtures.R  run_reference_export_docker.sh
amylogram-py/src/amylogram_py/: __init__.py  cli.py  encoding.py  fasta.py  features.py  forest.py  lookup.py  model.py  predict.py  provenance.py
amylogram-py/tests/: test_encoding.py  test_fasta.py  test_features.py  test_forest.py  test_lookup.py  test_model.py  test_predict.py  test_provenance.py  test_reference_contract.py
amylogram-py/tests/fixtures/: amylogram_sixmer_probabilities.json
analysis/: compare_amylogram_r_py.py
article_reproduction/: Amylice_reproduce_article_results.ipynb  GSE287540_SraRunTable.csv  README.md  (+30 more)
(+797 files in other folders)
