[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amylogram-py"
version = "0.1.0"
description = "Fast Python-compatible AmyloGram predictor implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "AmyloGram-Py contributors" }
]
dependencies = []

[project.scripts]
amylogram-py = "amylogram_py.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = false
